integration-tests/src/test/resources/onpremcrtx/model-crossdomaintransaction-domain2.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

domainInfo:
  AdminUserName: '@@PROP:ADMIN_USERNAME@@'
  AdminPassword: '@@PROP:ADMIN_PASSWORD@@'
  ServerStartMode: 'prod'

topology:
  Name: '@@PROP:DOMAIN_NAME@@'
  AdminServerName: "admin-server"
  Cluster:
    "cluster-1":
      DynamicServers:
        ServerTemplate:  "cluster-1-template"
        ServerNamePrefix: "managed-server"
        DynamicClusterSize: 2
        MaxDynamicClusterSize: 2
        CalculatedListenPorts: true
  Server:
    "admin-server":
      ListenPort: 7001
      ExternalDNSName: '@@PROP:DNS_NAME@@'
  ServerTemplate:
    "cluster-1-template":
      Cluster: "cluster-1"
      ListenPort : 8001
      ExternalDNSName: '@@PROP:DNS_NAME@@'
      DataSource:
        RmiJDBCSecurity: Compatibility
