integration-tests/src/test/resources/onpremcrtx/model2-cdt-jms.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
resources:
  FileStore:
    TestCdtFileStore:
      Target: 'cluster-1'
  JMSServer:
    TestCdtJmsServer:
      ProductionPausedAtStartup: false
      ConsumptionPausedAtStartup: false
      Target: 'cluster-1'
      PersistentStore: 'TestCdtFileStore'
      InsertionPausedAtStartup: false
      MessageCompressionOptions: GZIP_DEFAULT_COMPRESSION

  JMSSystemResource:
    TestCdtJmsModule:
      Target: 'cluster-1'
      SubDeployment:
        TestCdtSubDeployment:
          Target: TestCdtJmsServer
      JmsResource:
        UniformDistributedTopic:
          testCdtUniformTopic:
            SubDeploymentName: TestCdtSubDeployment
            JNDIName: jms.testCdtUniformTopic
            ForwardingPolicy: Partitioned
        ConnectionFactory:
                ClusterConnectionFactory:
                   JNDIName: jms.ClusterConnectionFactory
                   DefaultTargetingEnabled: true
                   LoadBalancingParams:
                       ServerAffinityEnabled: false
                       LoadBalancingEnabled: true
