integration-tests/src/test/resources/onpremcrtx/onprem-domain-routing.yaml
# Copyright (c) 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-routing-ingress
  namespace: NAMESPACE
spec:
  ingressClassName: traefik-onprem
  rules:
    - host: domain1-managed-server1.NAMESPACE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain1-managed-server1
                port:
                  number: 8001
    - host: domain1-managed-server2.NAMESPACE
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain1-managed-server2
                port:
                  number: 8001
